# idf-components

./: LICENSE  README.md
flexispot/: CMakeLists.txt  Kconfig  README.md  flexispot.c  flexispot.h  flexispot_config.h
m5atom-bsp/: CMakeLists.txt  idf_component.yml  m5atom.c  m5atom.h
m5tab5-bsp/: CMakeLists.txt  idf_component.yml
m5tab5-bsp/devices/gt911/: gt911.c  gt911.h
m5tab5-bsp/devices/ili9881c/: ili9881c.c  ili9881c.h  ili9881c_init_data.h
m5tab5-bsp/devices/pi4io/: pi4io.c  pi4io.h
m5tab5-bsp/devices/st7123/: st7123_init_data.h  st7123_lcd.c  st7123_lcd.h  st7123_touch.c  st7123_touch.h
m5tab5-bsp/inc/: bsp_common.h  bsp_tab5.h
m5tab5-bsp/inc/misc/: bsp_display.h
m5tab5-bsp/inc_private/: bsp_private.h
m5tab5-bsp/src/: bsp_tab5.c
